--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     .navbar li a:hover {
         text-decoration: underline;
-        color: rgb(61, 9, 156);
+        color: #FF6263;
 
     }
 
